project/styles/main.css
/* ... */
 .mobile-cart-notifications{
    display: none;
    align-items: center;
    gap: 15px;
 }
.mobile-nav-container a{
  display: block;
  padding: 0.93rem 1.25rem;
  color: var(--white-color);
}
.mobile-nav-container button {
  margin: 10px 1.25rem 0 1.25rem;

}

.mobile-nav-container a:focus,.mobile-nav-container a:hover {
  background: var(--support-color);
}

.show-mobile-navcontainer {
  z-index: 70;
  transform: translateY(0);
  visibility: visible;
}

.backdrop {
  width: 100%;
  height: 100%;
  position: fixed;
  display: none;
  background: var(--light-green-gradient);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
.showbackdrop {
  display: block;
}
.header-banner {
  min-height: 28.75rem;
  padding: 3.12rem 0;
  position: relative;
  background-attachment: fixed;
  background: var(--green-gradient), url("../images/header.jpg");
  background-size: cover;
  background-position: center;
  clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 85%);
}

.header-info {
  padding: 6.12rem 1.875rem 2rem 1.875rem;
}
.header-info h1 {
  font-size: 3.23rem;
  color: var(--white-color);
  font-weight: 600;
  line-height: 1.1;
}

.header-info span {
  color: var(--support-color);
}

.header-info p {
  color: var(--white-color);
  margin: 1.87rem 0;
  line-height: 1.7;
  width: 50%;
}

/* Animated Hamburger menu starts here */

.hamburger {
  width: 3.43rem;
  height: 3.43rem;
  background: var(--support-color);
  border-radius: 50%;
  display: none;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: all 0.4s ease;
  box-shadow: var(--box-shadow);
  z-index: 6;
}

.hamburger:hover .bars::before,
.hamburger:hover .bars::after {
  transition: transform 0.3s ease;
}

.hamburger:hover .bars::before {
  transform: translateY(-0.62rem);
}

.hamburger:hover .bars::after {
  transform: translateY(0.62rem);
}

.bars {
  background: #fff;
  height: 0.18rem;
  width: 60%;
  position: relative;
  display: flex;
  justify-content: center;
  transition: transform 0.4s ease;
}

.bars::before {
  content: "";
  width: 80%;
  height: 0.18rem;
  background: #fff;
  position: absolute;
  transform: translateY(-0.5rem);
}

.bars::after {
  content: "";
  width: 80%;
  height: 0.18rem;
  background: #fff;
  position: absolute;
  transform: translateY(0.5rem);
}

.crossburger {
  background: black;
}

.crossburger .bars {
  background: transparent;
  transform: rotate(180deg);
}

.crossburger .bars::before {
  transform: translateY(0px) rotate(45deg) !important;
}

.crossburger .bars::after {
  transform: translateY(0px) rotate(-45deg) !important;
}

/* Animated Hamburger menu ends here */
/* ====== Header section ends here ====== */
/* -----------------------Main Section--------------------------- */

/* ====== Header showcase section starts here ====== */
.header-showcase {
  margin-top: -6.25rem;
  justify-content: center;
  gap: 20px;
  padding: 0.5rem;
  display: flex;
}

.header-showcase div {
  position: relative;
}

.header-cards {
  background: var(--white-color);
  display: flex;
  min-height: 3.12rem;
  padding: 0.62rem;
  box-shadow: var(--box-shadow);
  border-radius: 0.75rem;
  border: 1px solid transparent;
  transition: all 0.3s ease;
  min-width: 28.3%;
}

.header-cards:hover {
  border: 1px solid var(--main-color2);
  transform: translateY(-5px);
}

.cards-brand {
  height: 3.12rem;
  width: 3.12rem;
  border-radius: 50%;
  border: 0.5px solid var(--main-color2);
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.56rem;
  margin-right: 0.62rem;
  color: var(--main-color);
}

.card-avilability,
.card-tags {
  display: block;
}

.card-tags {
  font-weight: 500;
}

.card-avilability {
  color: var(--main-color);
}

.cards-brand-desc button {
  padding: 0.06rem;
  border-radius: 0.25rem;
  border: 0.06rem solid var(--light-gray);
  background: transparent;
  color: var(--gray-color);
  font-size: 0.75rem;
  font-weight: 600;
}

/* ====== Header showcase section ends here ====== */

/* ====== About us section starts here ====== */
.aboutus {
  padding: 3rem 1.875rem;
}
/* ====== About us section ends here ====== */

/* ====== Product cards section starts here ====== */
.whyus-container{
  padding: 0 30px;

}
.products-card-container {
  gap: 15px;
}
.productcard {
  border: 0.06rem solid var(--main-color2);
  height: 100%;
  padding: 10px;
  transform: translateY(0px);
  background: transparent;
  scale: 1;
  transition: transform var(--transition), background-color 10s ease-in,
    color 0.1s ease, scale 0.3s ease;
  cursor: pointer;
  height: 100%;
}

.productcard:hover {
  transform: translateY(-0.31rem);
  background: var(--green-gradient);
  color: var(--white-color);
  scale: 1.03;
}

.productcard-icon svg {
  color: var(--main-color2);
  display: block;
  width: 2.81rem;
  height: 2.81rem;
}

.productcard:hover svg {
  color: var(--white-color);
}

.productcard-title {
  margin: 0.18rem 0;
  font-size: 1.12rem;
  font-weight: 400;
}

.productcard p {
  line-height: 1.1;
  font-size: 0.93rem;
  text-align: left;
}

/* ====== Product cards section ends here ====== */

/* ====== Promo cards section starts here ====== */
.promocards-container {
  padding: 1rem 1.875rem;
}
.promo-details {
  display: flex;
  gap: 1.5rem;
  justify-content: space-evenly;
  flex-wrap: wrap;
}
.promo-details > div {
  width: 25%;
}
.promocards-main {
  min-height: 29.06rem;
  background: var(--green-gradient), url("../images/products-intro.jpg");
  background-size: cover;
  border-radius: 0.56rem;
  color: var(--white-color);
  background-position: bottom left;
  padding: 1.5rem;
}

.promocards-main h3 {
  font-size: 1.875rem;
  font-weight: 700;
  line-height: 1.09;
  letter-spacing: -0.2px;
}

.promocards-main p {
  margin: 1.25rem 0;
}

.promoapp-preview img {
  width: 100%;
}

.promo-steps {
  display: flex;
  margin: 0.75rem 0;
}
/* ... */

